# llwllm

./: .gitignore  LICENSE  README-zh.md  README.md
experiments/: experiments.md
experiments/e001-zh-en-translator/: Cargo.toml
experiments/e001-zh-en-translator/src/: main.rs
experiments/e002-zh-en-trans-tauri/: package.json
experiments/e002-zh-en-trans-tauri/src/: App.vue
experiments/e002-zh-en-trans-tauri/src-tauri/: Cargo.toml  tauri.conf.json
experiments/e002-zh-en-trans-tauri/src-tauri/src/: main.rs
experiments/e003-zh-en-trans-tauri/: package.json  pnpm-lock.yaml
experiments/e003-zh-en-trans-tauri/src-tauri/: Cargo.toml  tauri.conf.json
experiments/e003-zh-en-trans-tauri/src-tauri/src/: lib.rs
experiments/e004-zh-en-trans-tauri-v1/: package.json
experiments/e004-zh-en-trans-tauri-v1/src-tauri/: Cargo.toml
experiments/e004-zh-en-trans-tauri-v1/src-tauri/src/: lib.rs  main.rs
